--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -130,6 +130,7 @@ gui.sapturretmod.tcu.page.title.targets.player=Player Target Settings
 gui.sapturretmod.tcu.page.title.targets.smart=Smart Target Settings
 gui.sapturretmod.tcu.page.title.colorizer=Shield Color Settings
 gui.sapturretmod.tcu.page.title.upgrades=Upgrades
+gui.sapturretmod.tcu.page.title.leveling=Leveling
 gui.sapturretmod.tcu.button.dismantle=Dismantle Turret
 gui.sapturretmod.tcu.button.activate=Activate Turret
 gui.sapturretmod.tcu.button.deactivate=Deactivate Turret
