* bottom tab navigation works now  * begun redoing the TCU info GUI

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -137,13 +137,13 @@ gui.sapturretmod.tcu.label.shield_pers=Pers. Shield: %s
 gui.sapturretmod.tcu.label.shield_pers_recv=Pers. Shield: Recovering %s
 gui.sapturretmod.tcu.label.shield_turret=Shield: %s
 gui.sapturretmod.tcu.label.shield_turret_recv=Shield: Recovering %s
-gui.sapturretmod.tcu.page.title.info=Turret Info
-gui.sapturretmod.tcu.page.title.targets.creature=Entity Target Settings
-gui.sapturretmod.tcu.page.title.targets.player=Player Target Settings
-gui.sapturretmod.tcu.page.title.targets.smart=Smart Target Settings
-gui.sapturretmod.tcu.page.title.colorizer=Shield Color Settings
-gui.sapturretmod.tcu.page.title.upgrades=Upgrades
-gui.sapturretmod.tcu.page.title.leveling=Leveling
+gui.sapturretmod.tcu.page.title.sapturretmod:info=Turret Info
+gui.sapturretmod.tcu.page.title.sapturretmod:targets.creature=Entity Target Settings
+gui.sapturretmod.tcu.page.title.sapturretmod:targets.player=Player Target Settings
+gui.sapturretmod.tcu.page.title.sapturretmod:targets.smart=Smart Target Settings
+gui.sapturretmod.tcu.page.title.sapturretmod:colorizer=Shield Color Settings
+gui.sapturretmod.tcu.page.title.sapturretmod:upgrades=Upgrades
+gui.sapturretmod.tcu.page.title.sapturretmod:leveling=Leveling
 gui.sapturretmod.tcu.button.dismantle=Dismantle Turret
 gui.sapturretmod.tcu.button.activate=Activate Turret
 gui.sapturretmod.tcu.button.deactivate=Deactivate Turret
