TCU page keys are now simple Strings

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -20,11 +20,11 @@ item.sapturretmod:turret.laser.name=Laser Turret (T3)
 item.sapturretmod:turret.flamethrower.name=Flamethrower Turret (T3)
 # TCU
 item.sapturretmod:turret_control_unit.name=Turret Control Unit
-item.sapturretmod:turret_control_unit.name.1=TCU (Turret Control Unit)
-item.sapturretmod:turret_control_unit.name.2=TCU (Turret Corrosion Unity)
-item.sapturretmod:turret_control_unit.name.3=TCU (Trigger Capacity Uranus)
-item.sapturretmod:turret_control_unit.name.4=TCU (Timmy Cleans Utilities)
-item.sapturretmod:turret_control_unit.name.5=TCU (Transient Colossal Uppercut)
+item.sapturretmod:turret_control_unit.name.1=Turret Croissant Urn
+item.sapturretmod:turret_control_unit.name.2=Turret Corrosion Unity
+item.sapturretmod:turret_control_unit.name.3=Trigger Capacity Uranus
+item.sapturretmod:turret_control_unit.name.4=Timmy's Clean Utilities
+item.sapturretmod:turret_control_unit.name.5=Transient Colossal Uppercut
 # Assembly Upgrades
 item.sapturretmod:turret_assembly_auto.name=Automation Upgrade
 item.sapturretmod:turret_assembly_auto.ttip=Used in the Turret Assembly Table
@@ -118,17 +118,6 @@ death.attack.sapturretmod.turret.sapturretmod:laser=%1$s was cut precisely and b
 death.attack.sapturretmod.turret.sapturretmod:flamethrower=%1$s has been cooked to well-done by %2$s
 
 #### GUI ####
-# Turret Info
-sanlib.lexicon.sapturretmod.assembly=Turret Assembly Recipe
-sanlib.lexicon.sapturretmod.desc=Description
-sanlib.lexicon.sapturretmod.details=Details
-sanlib.lexicon.sapturretmod.stat.health=Health
-sanlib.lexicon.sapturretmod.stat.ammo=Ammo Capacity
-sanlib.lexicon.sapturretmod.stat.range=Range
-sanlib.lexicon.sapturretmod.stat.reload=Reload Time
-sanlib.lexicon.sapturretmod.stat.tier=Tier
-sanlib.lexicon.sapturretmod.stat.rounds=Rounds provided
-sanlib.lexicon.sapturretmod.stat.damage=Damage per projectile
 # TCU
 gui.sapturretmod.tcu.label.health=Health: %s
 gui.sapturretmod.tcu.label.ammo=Ammo: %s
@@ -137,26 +126,37 @@ gui.sapturretmod.tcu.label.shield_pers=Pers. Shield: %s
 gui.sapturretmod.tcu.label.shield_pers_recv=Pers. Shield: Recovering %s
 gui.sapturretmod.tcu.label.shield_turret=Shield: %s
 gui.sapturretmod.tcu.label.shield_turret_recv=Shield: Recovering %s
-gui.sapturretmod.tcu.page.title.sapturretmod:info=Turret Info
-gui.sapturretmod.tcu.page.title.sapturretmod:targets.creature=Entity Target Settings
-gui.sapturretmod.tcu.page.title.sapturretmod:targets.player=Player Target Settings
-gui.sapturretmod.tcu.page.title.sapturretmod:targets.smart=Smart Target Settings
-gui.sapturretmod.tcu.page.title.sapturretmod:colorizer=Shield Color Settings
-gui.sapturretmod.tcu.page.title.sapturretmod:upgrades=Upgrades
-gui.sapturretmod.tcu.page.title.sapturretmod:leveling=Leveling
-gui.sapturretmod.tcu.button.dismantle=Dismantle Turret
-gui.sapturretmod.tcu.button.activate=Activate Turret
-gui.sapturretmod.tcu.button.deactivate=Deactivate Turret
-gui.sapturretmod.tcu.button.show_range=Show Range
-gui.sapturretmod.tcu.button.hide_range=Hide Range
-gui.sapturretmod.tcu.button.select_all=Select All
-gui.sapturretmod.tcu.button.deselect_all=Deselect All
-gui.sapturretmod.tcu.button.select_mobs=Select Monster
-gui.sapturretmod.tcu.button.select_animals=Select Animals
-gui.sapturretmod.tcu.button.select_other=Select Other
-gui.sapturretmod.tcu.button.whitelist=Whitelist Mode
-gui.sapturretmod.tcu.button.blacklist=Blacklist Mode
-gui.sapturretmod.tcu.button.eject_all=Eject All Upgrades
+gui.sapturretmod.tcu.page.info.title=Turret Info
+gui.sapturretmod.tcu.page.info.dismantle.error=You need a chest in your inventory to dismantle!
+gui.sapturretmod.tcu.page.info.health=Health (1 HP = 1/2 hearts)
+gui.sapturretmod.tcu.page.info.ammo=Ammo
+gui.sapturretmod.tcu.page.info.target=Current Target
+gui.sapturretmod.tcu.page.info.player=Owner
+gui.sapturretmod.tcu.page.info.forcefield=Forcefield
+gui.sapturretmod.tcu.page.targets.search.placeholder=Search for targets
+gui.sapturretmod.tcu.page.targets.creature.title=Entity Target Settings
+gui.sapturretmod.tcu.page.targets.player.title=Player Target Settings
+gui.sapturretmod.tcu.page.targets.smart.title=Smart Target Settings
+gui.sapturretmod.tcu.page.targets.smart.turret=Turret Awareness
+gui.sapturretmod.tcu.page.targets.smart.tamed=Tamed Awareness
+gui.sapturretmod.tcu.page.targets.smart.age=Age Awareness
+gui.sapturretmod.tcu.page.targets.smart.count=Count Awareness
+gui.sapturretmod.tcu.page.colorizer.title=Shield Color Settings
+gui.sapturretmod.tcu.page.colorizer.colorcode=Color Code (AARRGGBB)
+gui.sapturretmod.tcu.page.upgrades.title=Upgrades
+gui.sapturretmod.tcu.page.leveling.title=Leveling
+gui.sapturretmod.tcu.button.info.dismantle=Dismantle Turret
+gui.sapturretmod.tcu.button.info.activate=Activate Turret
+gui.sapturretmod.tcu.button.info.deactivate=Deactivate Turret
+gui.sapturretmod.tcu.button.info.show_range=Show Range
+gui.sapturretmod.tcu.button.info.hide_range=Hide Range
+gui.sapturretmod.tcu.button.targets.whitelist=Whitelist Mode
+gui.sapturretmod.tcu.button.targets.blacklist=Blacklist Mode
+gui.sapturretmod.tcu.button.targets.select_all=Select All
+gui.sapturretmod.tcu.button.targets.deselect_all=Deselect All
+gui.sapturretmod.tcu.button.targets.creature.select_mobs=Select Monster
+gui.sapturretmod.tcu.button.targets.creature.select_animals=Select Animals
+gui.sapturretmod.tcu.button.targets.creature.select_other=Select Other
 gui.sapturretmod.tcu.button.adv_turret_ignore=Ignore other turrets
 gui.sapturretmod.tcu.button.adv_turret_same=Ignore entities targeted\nby turrets of the same type
 gui.sapturretmod.tcu.button.adv_turret_all=Ignore entities targeted\nby turrets of all types
@@ -171,12 +171,6 @@ gui.sapturretmod.tcu.button.adv_count_global_less=Don't target anything if globa
 gui.sapturretmod.tcu.button.adv_count_global_more=Don't target anything if global\nentity amount is greater than...
 gui.sapturretmod.tcu.button.adv_count_individual_less=Don't target entities of the\nsame type if amount of\nthat type is less than...
 gui.sapturretmod.tcu.button.adv_count_individual_more=Don't target entities of the\nsame type if amount of\nthat type is greater than...
-gui.sapturretmod.tcu.page.info.dismantle.error=You need a chest in your inventory to dismantle!
-gui.sapturretmod.tcu.page.smarttgt.turret=Turret Awareness
-gui.sapturretmod.tcu.page.smarttgt.tamed=Tamed Awareness
-gui.sapturretmod.tcu.page.smarttgt.age=Age Awareness
-gui.sapturretmod.tcu.page.smarttgt.count=Count Awareness
-gui.sapturretmod.tcu.page.colorizer.colorcode=Color Code (AARRGGBB)
 # Assembly
 gui.sapturretmod.tassembly.cancel=Cancel
 gui.sapturretmod.tassembly.automate.enable=Automate
@@ -225,6 +219,16 @@ itemGroup.sapturretmod:misc=Turret Mod: Items
 itemGroup.sapturretmod:upgrades=Turret Mod: Upgrades
 
 #### Lexicon ####
+sanlib.lexicon.sapturretmod.assembly=Turret Assembly Recipe
+sanlib.lexicon.sapturretmod.desc=Description
+sanlib.lexicon.sapturretmod.details=Details
+sanlib.lexicon.sapturretmod.stat.health=Health
+sanlib.lexicon.sapturretmod.stat.ammo=Ammo Capacity
+sanlib.lexicon.sapturretmod.stat.range=Range
+sanlib.lexicon.sapturretmod.stat.reload=Reload Time
+sanlib.lexicon.sapturretmod.stat.tier=Tier
+sanlib.lexicon.sapturretmod.stat.rounds=Rounds provided
+sanlib.lexicon.sapturretmod.stat.damage=Damage per projectile
 # Ammo
 sanlib.lexicon.sapturretmod.ammo.name=Ammunition Types
 sanlib.lexicon.sapturretmod.ammo.turret=Applicable Turret
