* Item element is now part of SanLib  * added set-/isVisible() methods to all elements, now required by SanLib  * PlayerIcon element now forces alpha to prevent white background  * remove checkRequiredElements() from GuiTcuHelper  * added ErrorLabel element, now used for the message when the dismantling fails because of a missing item  * re-added smart targeting and upgrade pages to TCU GUI  * removed ButtonLabel, since Labels in SanLib can now be bound to other elements, which check for their visibility  * TCU page JSONs now have a "tcu.json" parent which define the size and navigation elements of the GUIs  * switched around the logic behind entity counting in the smart target settings to make it more intuitive

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -128,6 +128,7 @@ gui.sapturretmod.tcu.label.shield_turret=Shield: %s
 gui.sapturretmod.tcu.label.shield_turret_recv=Shield: Recovering %s
 gui.sapturretmod.tcu.page.info.title=Turret Info
 gui.sapturretmod.tcu.page.info.dismantle.error=You need a chest in your inventory to dismantle!
+gui.sapturretmod.tcu.page.info.name=Custom Turret Name
 gui.sapturretmod.tcu.page.info.health=Health (1 HP = 1/2 hearts)
 gui.sapturretmod.tcu.page.info.ammo=Ammo
 gui.sapturretmod.tcu.page.info.target=Current Target
@@ -157,20 +158,20 @@ gui.sapturretmod.tcu.button.targets.deselect_all=Deselect All
 gui.sapturretmod.tcu.button.targets.creature.select_mobs=Select Monster
 gui.sapturretmod.tcu.button.targets.creature.select_animals=Select Animals
 gui.sapturretmod.tcu.button.targets.creature.select_other=Select Other
-gui.sapturretmod.tcu.button.adv_turret_ignore=Ignore other turrets
-gui.sapturretmod.tcu.button.adv_turret_same=Ignore entities targeted\nby turrets of the same type
-gui.sapturretmod.tcu.button.adv_turret_all=Ignore entities targeted\nby turrets of all types
-gui.sapturretmod.tcu.button.adv_tamed_all=Target all tamed creatures
-gui.sapturretmod.tcu.button.adv_tamed_players=Only target tamed creatures\nfrom targeted players
-gui.sapturretmod.tcu.button.adv_tamed_none=Don't target tamed creatures
-gui.sapturretmod.tcu.button.adv_child_adult=Target children and adults
-gui.sapturretmod.tcu.button.adv_child_only=Target only children
-gui.sapturretmod.tcu.button.adv_adult_only=Target only adults
-gui.sapturretmod.tcu.button.adv_count_no=Ignore entity count
-gui.sapturretmod.tcu.button.adv_count_global_less=Don't target anything if global\nentity amount is less than...
-gui.sapturretmod.tcu.button.adv_count_global_more=Don't target anything if global\nentity amount is greater than...
-gui.sapturretmod.tcu.button.adv_count_individual_less=Don't target entities of the\nsame type if amount of\nthat type is less than...
-gui.sapturretmod.tcu.button.adv_count_individual_more=Don't target entities of the\nsame type if amount of\nthat type is greater than...
+gui.sapturretmod.tcu.button.targets.smart.turret_ignore=Ignore other turrets
+gui.sapturretmod.tcu.button.targets.smart.turret_same=Ignore entities targeted\nby turrets of the same type
+gui.sapturretmod.tcu.button.targets.smart.turret_all=Ignore entities targeted\nby turrets of any type
+gui.sapturretmod.tcu.button.targets.smart.tamed_all=Target all tamed entities
+gui.sapturretmod.tcu.button.targets.smart.tamed_players=Only target tamed entities\nfrom targeted players
+gui.sapturretmod.tcu.button.targets.smart.tamed_none=Don't target tamed entities
+gui.sapturretmod.tcu.button.targets.smart.child_adult=Target children and adults
+gui.sapturretmod.tcu.button.targets.smart.child_only=Target only children
+gui.sapturretmod.tcu.button.targets.smart.adult_only=Target only adults
+gui.sapturretmod.tcu.button.targets.smart.count_no=Ignore entity count
+gui.sapturretmod.tcu.button.targets.smart.count_global_less=Shoot when global entity\namount is less than...
+gui.sapturretmod.tcu.button.targets.smart.count_global_more=Shoot when global entity\namount is more than...
+gui.sapturretmod.tcu.button.targets.smart.count_individual_less=Shoot when amount of the same\ntype of entity is less than...
+gui.sapturretmod.tcu.button.targets.smart.count_individual_more=Shoot when amount of the same\ntype of entity is more than...
 # Assembly
 gui.sapturretmod.tassembly.cancel=Cancel
 gui.sapturretmod.tassembly.automate.enable=Automate
