re-added colorizer TCU GUI

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -143,7 +143,8 @@ gui.sapturretmod.tcu.page.targets.smart.tamed=Tamed Awareness
 gui.sapturretmod.tcu.page.targets.smart.age=Age Awareness
 gui.sapturretmod.tcu.page.targets.smart.count=Count Awareness
 gui.sapturretmod.tcu.page.colorizer.title=Shield Color Settings
-gui.sapturretmod.tcu.page.colorizer.colorcode=Color Code (AARRGGBB)
+gui.sapturretmod.tcu.page.colorizer.colorcode=Color Code
+gui.sapturretmod.tcu.page.colorizer.cullfaces=Cull Inner Faces
 gui.sapturretmod.tcu.page.upgrades.title=Upgrades
 gui.sapturretmod.tcu.page.leveling.title=Leveling
 gui.sapturretmod.tcu.button.info.dismantle=Dismantle Turret
