--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -84,7 +84,7 @@ item.sapturretmod:upgrade.endertoxin.2.name=Ender Toxin II Upgrade
 item.sapturretmod:upgrade.turretsafe.name=Turret Safe Upgrade
 
 #### Entities ####
-attribute.generic.maxHealth=Max Health
+attribute.generic.maxHealth=Max. Health
 attribute.generic.followRange=Follow Range
 attribute.generic.knockbackResistance=Knockback Resistance
 attribute.generic.movementSpeed=Movement Speed
@@ -94,9 +94,9 @@ attribute.generic.attackSpeed=Attack Speed
 attribute.generic.armor=Armor
 attribute.generic.armorToughness=Armor Toughness
 attribute.generic.luck=Luck
-attribute.sapturretmod.maxAmmoCapacity=Max Ammunition Capacity
+attribute.sapturretmod.maxAmmoCapacity=Max. Ammo Capacity
 attribute.sapturretmod.maxReloadTicks=Reload Time
-attribute.sapturretmod.maxInitShootTicks=Shooting Initialization Time
+attribute.sapturretmod.maxInitShootTicks=Targeting Time
 # Turrets
 entity.sapturretmod:turret.name=Defense Turret
 entity.sapturretmod:turret.crossbow.name=Crossbow Turret (T1)
@@ -147,6 +147,9 @@ gui.sapturretmod.tcu.page.colorizer.colorcode=Color Code
 gui.sapturretmod.tcu.page.colorizer.cullfaces=Cull Inner Faces
 gui.sapturretmod.tcu.page.upgrades.title=Upgrades
 gui.sapturretmod.tcu.page.leveling.title=Leveling
+gui.sapturretmod.tcu.page.leveling.level=Level: $0%d
+gui.sapturretmod.tcu.page.leveling.modifier=Modifiers
+gui.sapturretmod.tcu.page.leveling.modValue=+%.2f %%
 gui.sapturretmod.tcu.button.info.dismantle=Dismantle Turret
 gui.sapturretmod.tcu.button.info.activate=Activate Turret
 gui.sapturretmod.tcu.button.info.deactivate=Deactivate Turret
