more work on leveling upgrade

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -147,9 +147,9 @@ gui.sapturretmod.tcu.page.colorizer.colorcode=Color Code
 gui.sapturretmod.tcu.page.colorizer.cullfaces=Cull Inner Faces
 gui.sapturretmod.tcu.page.upgrades.title=Upgrades
 gui.sapturretmod.tcu.page.leveling.title=Leveling
-gui.sapturretmod.tcu.page.leveling.level=Level: $0%d
+gui.sapturretmod.tcu.page.leveling.level=Level: §0%d
 gui.sapturretmod.tcu.page.leveling.modifier=Modifiers
-gui.sapturretmod.tcu.page.leveling.modValue=+%.2f %%
+gui.sapturretmod.tcu.page.leveling.modValue=+%s %%
 gui.sapturretmod.tcu.button.info.dismantle=Dismantle Turret
 gui.sapturretmod.tcu.button.info.activate=Activate Turret
 gui.sapturretmod.tcu.button.info.deactivate=Deactivate Turret
