* updated some textures, added one for the leveling upgrade  * more work on the harpoon turret

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -149,7 +149,7 @@ gui.sapturretmod.tcu.page.upgrades.title=Upgrades
 gui.sapturretmod.tcu.page.leveling.title=Leveling
 gui.sapturretmod.tcu.page.leveling.level=Level: §0%d
 gui.sapturretmod.tcu.page.leveling.modifier=Modifiers
-gui.sapturretmod.tcu.page.leveling.modValue=+%s %%
+gui.sapturretmod.tcu.page.leveling.modValue=%s %%
 gui.sapturretmod.tcu.button.info.dismantle=Dismantle Turret
 gui.sapturretmod.tcu.button.info.activate=Activate Turret
 gui.sapturretmod.tcu.button.info.deactivate=Deactivate Turret
