* slots of the Turret Assembly have been rearranged, "magic numbers" for specific slots have been made into constants  * added new Redstone Awareness upgrade for the Turret Assembly  * fixed issues with Assembly recipe tooltips not updating on the same frame when the mouse has moved over a different recipe within the GUI  * the renderer for Turret Assembly upgrades has been rearranged  * when transferring items out of the Turret Assembly into the player inventory via shift-right-click, the order of insertion is now like other inventories (beginning at first slot of hotbar, if full, starting at the first slot of the inventory; it was reversed before)  * fixed transferring items from the Turret Crate ammo slot into the player inventory - it'll now not ignore the hotbar anymore  * Turret Assembly now stops its laser arm and won't reset to its starting position when the Turret Assembly runs out of power / is disabled by a redstone signal  * updated Turret Assembly upgrade textures

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -34,6 +34,8 @@ item.sapturretmod:turret_assembly_filter.name=Filter Upgrade
 item.sapturretmod:turret_assembly_filter.ttip=Used in the Turret Assembly Table
 item.sapturretmod:turret_assembly_filter.conf=Configured
 item.sapturretmod:turret_assembly_filter.inst=Right-click to configure, Shift-right-click to clear config.
+item.sapturretmod:turret_assembly_redstone.name=Redstone Awareness Upgrade
+item.sapturretmod:turret_assembly_redstone.ttip=Used in the Turret Assembly Table
 # Ammo
 item.sapturretmod:ammo.arrow.name=Arrow Bolt
 item.sapturretmod:ammo.shotgunshell.name=Shotgun Shell
