* fixed slider marker being offset by 1 pixel on the maximum value inside the colorizer GUI  * fixed an issue that prevents rendering of the wires on the Electrolyte Generator caused by miscalculation of the vector angles due to floating point errors  * turret items now display their variant, if existent  * pick-block on a turret now gives you the item with variant, if applicable  * Crossbow Turret now has variants for each type of planks, determined when crafting it with that specific type of plank (mixed planks result in the default (oak) variant)  * Resources class now supports multiple "sub-resources" accessible via array  * fixed buoyant turret model (box holding antennas won't float above base box, fixed texture of the floating tire)  * Harpoon Turret item now has a name

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -8,9 +8,17 @@ item.sapturretmod:turret_info.name=Turret Lexicon
 item.sapturretmod:turret_info.desc=Gives information about the\nitems in the Turret Mod.
 # Turrets
 item.sapturretmod:turret.name=Defense Turret
+item.sapturretmod:turret.variant=Variant: %s
 item.sapturretmod:turret.customname=Name: %s
 item.sapturretmod:turret.health=Health: %s HP
 item.sapturretmod:turret.crossbow.name=Crossbow Turret (T1)
+item.sapturretmod:turret.crossbow.variant.0=Oak
+item.sapturretmod:turret.crossbow.variant.1=Spruce
+item.sapturretmod:turret.crossbow.variant.2=Birch
+item.sapturretmod:turret.crossbow.variant.3=Jungle
+item.sapturretmod:turret.crossbow.variant.4=Acacia
+item.sapturretmod:turret.crossbow.variant.5=Dark Oak
+item.sapturretmod:turret.harpoon.name=Harpoon Turret (T1)
 item.sapturretmod:turret.shotgun.name=Shotgun Turret (T1)
 item.sapturretmod:turret.cryolator.name=Cryolator Turret (T1)
 item.sapturretmod:turret.revolver.name=Revolver Turret (T2)
